--- a/index.css
+++ b/index.css
@@ -5,9 +5,9 @@ body{
 
 a {
     color: white;
-
 }
 
+/* intro*/
 .intro{
     text-align: center;
     display: flex;
@@ -16,29 +16,29 @@ a {
     
 }
 
-.profile_pic{
-    height:20rem;
-    width:auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  
-}
+    .profile_pic{
+        height:20rem;
+        width:auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    
+    }
 
 
-.leftColumn{
-    margin: auto;
-    max-width: 25em;
+    .leftColumn{
+        margin: auto;
+        max-width: 25em;
 
-}
+    }
 
-.rightColumn{
-    margin: auto;
+    .rightColumn{
+        margin: auto;
 
-}
+    }
 
 
-
+/* icon bar*/
 .icon-bar {
     width: 100%; /* Full-width */
     background-color: #282A35; /* Dark-grey background */
@@ -53,6 +53,7 @@ a {
     transition: all 0.3s ease; /* Add transition for hover effects */
     color: white; /* White text color */
     font-size: 36px; /* Increased font size */
+    text-decoration: none;
   }
   
   .icon-bar a:hover {
@@ -63,3 +64,19 @@ a {
     background-color: #04AA6D; /* Add an active/current color */
   }
   
+/* cards */
+.display_card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: #273948;
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    padding-left : 2ch;
+  }
+    /* On mouse-over, add a deeper shadow */
+  .display_card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  .display_card p{
+
+    padding-left : 4ch;
+  }
